# strang-in-c

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cstr.h  search.c  vec.c
tests/: CMakeLists.txt  border_array_test.c  kmp_search_test.c  naive_search_test.c  vec_test.c
